--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -10,8 +10,21 @@
 </head>
 
 <body>
+  <div class="container pa-3">
+    <!-- app messages -->
 
-  {% block page_content %}{% endblock %}
+    {% if messages %}
+
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+      {{message}}
+    </div>
+    {% endfor %}
+
+    {% endif %}
+
+    {% block page_content %}{% endblock %}
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
