--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,30 +1,30 @@
 {% extends "base.html" %} {% load static %} {% block page_content %}
-<h1>sign up</h1>
 
 <head>
     <title>Register here</title>
 </head>
 
-<section>
-    <div class="contents">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">
-                    Join today
-                </legend>
-                {{ form }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-info" type="submit">Sign up</button>
-            </div>
-        </form>
-        <div class="border-top pt-4">
-            <small class="text-muted">
-                Already have an account??
-                <a href="#" class="ml-3"> sign in</a>
-            </small>
 
-        </div>
+
+<form method="POST">
+    {% csrf_token %}
+    <fieldset class="form-group">
+        <legend class="border-bottom mb-4">
+            Join today
+        </legend>
+        {{ form.as_p }}
+    </fieldset>
+    <div class="form-group">
+        <button class="btn btn-info" type="submit">Sign up</button>
     </div>
-</section>
+</form>
+<div class="border-top pt-4">
+    <small class="text-muted">
+        Already have an account??
+        <a href="#" class="ml-3"> sign in</a>
+    </small>
+
+</div>
+
+
+{% endblock %}
