--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,18 +1,15 @@
-{% extends "base.html" %} {% load static %} {% block page_content %}
+{% extends "base.html" %} {% load static %} {% load crispy_forms_tags %} {% block page_content %}
 
 <head>
     <title>Register here</title>
 </head>
-
-
-
 <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
         <legend class="border-bottom mb-4">
             Join today
         </legend>
-        {{ form.as_p }}
+        {{ form|crispy }}
     </fieldset>
     <div class="form-group">
         <button class="btn btn-info" type="submit">Sign up</button>
